[tool.poetry]
name = "boole"
version = "1.1.0"
description = "A interpreter for Boolean Algebra"
authors = ["pab-h <dev.pab.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
idle = "scripts:main"
